--- a/iOS/Info.plist
+++ b/iOS/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSUserActivityTypes</key>
+	<array>
+		<string>piltch.trevor.CloudKit-Test-expense-selection</string>
+	</array>
 	<key>NSFaceIDUsageDescription</key>
 	<string>Allow &quot;Cashier&quot; to use Face ID to protect your data</string>
 	<key>CFBundleDevelopmentRegion</key>
